Images are re structured with the statuc url and save_post_pic used under the hood!!!

--- a/app/templates/update_post.html
+++ b/app/templates/update_post.html
@@ -111,7 +111,7 @@
 										{% endfor %}
 									  </div>
 									  {% else %}
-									  {{form.picture(class="upload-info")}}
+									  {{form.picture}}
 									  {% endif %}
 									</div>
 									
