--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -11,14 +11,14 @@
 	<meta name="author" content="CreativeLayers">
 
 	<!-- Styles -->
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap-grid.css" />
-	<link rel="stylesheet" href="static/css/icons.css">
-	<link rel="stylesheet" href="static/css/animate.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/style.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/responsive.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/chosen.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/colors/colors.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/bootstrap-grid.css')}}" />
+	<link rel="stylesheet" href="{{url_for('static',filename='icons.css')}}">
+	<link rel="stylesheet" href="{{url_for('static',filename='animate.min.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/style.css')}}" />
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/responsive.css')}}" />
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/chosen.css')}}" />
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/colors.css')}}" />
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/bootstrap.css')}}" />
 	<link rel="stylesheet" href="../../../maxcdn.bootstrapcdn.com/font-awesome/4.5.0/static/css/font-awesome.min.css" />
 	
 </head>
@@ -32,7 +32,7 @@
 	
 	<div class="responsive-header">
 		<div class="responsive-menubar">
-			<div class="res-logo"><a href="index.html" title=""><img src="static/images/resource/logo.png" alt="" /></a></div>
+			<div class="res-logo"><a href="index.html" title=""><img src="{{url_for('static',filename='images/resource/logo.png')}}" alt="" /></a></div>
 			<div class="menu-resaction">
 				<div class="res-openmenu">
 					<img src="static/images/icon.png" alt="" /> Menu
@@ -44,7 +44,9 @@
 		</div>
 		<div class="responsive-opensec">
 			<div class="btn-extars">
+				{% if current_user.is_authenticated%}
 				<a href="#" title="" class="post-job-btn"><i class="la la-plus"></i>Post Jobs</a>
+				{% endif %}
 				<ul class="account-btns">
 					<li><a href="{{url_for('register')}}"><i class="la la-key"></i> SignUp</a></li>
 					<li><a href="{{url_for('login')}}"><i class="la la-external-link-square"></i> Login</a></li>
@@ -164,8 +166,9 @@
 					<a href="index.html" title=""><img class="hidesticky" src="static/images/resource/logo.png" alt="" /><img class="showsticky" src="static/images/resource/logo10.png" alt="" /></a>
 				</div><!-- Logo -->
 				<div class="btn-extars">
-					<a href="#" title="" class="post-job-btn"><i class="la la-plus"></i>Post Jobs</a>
+					
 					{% if current_user.is_authenticated %}
+					<a href="{{url_for('add_post')}}" title="" class="post-job-btn"><i class="la la-plus"></i>New Post</a>
 					<ul class="account-btns">
 						<li><a href="{{url_for('account')}}"><i class="la la-key"></i> {{current_user.username}}</a></li>
 					<li><a href="{{url_for('logout')}}"><i class="la la-external-link-square"></i> Logout</a></li>
@@ -388,14 +391,14 @@
 
 
 
-<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="static/js/jquery.min.js" type="text/javascript"></script>
-<script src="static/js/modernizr.js" type="text/javascript"></script>
-<script src="static/js/script.js" type="text/javascript"></script>
-<script src="static/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="static/js/wow.min.js" type="text/javascript"></script>
-<script src="static/js/slick.min.js" type="text/javascript"></script>
-<script src="static/js/parallax.js" type="text/javascript"></script>
-<script src="static/js/select-chosen.js" type="text/javascript"></script>
+<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="{{ url_for ('static',filename='js/jquery.min.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/modernizr.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/script.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/bootstrap.min.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/wow.min.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/slick.min.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static',filename='js/parallax.js')}}" type="text/javascript"></script> 
+<script src="{{url_for('static',filename='js/select-chosen.js')}}" type="text/javascript"></script> 
 
 </body>
 
