--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -163,7 +163,7 @@
 		<div class="menu-sec">
 			<div class="container">
 				<div class="logo">
-					<a href="index.html" title=""><img class="hidesticky" src="static/images/resource/logo.png" alt="" /><img class="showsticky" src="static/images/resource/logo10.png" alt="" /></a>
+					<a href="/" title=""><img class="hidesticky" src="{{ url_for('static',filename='images/resource/logo.png')}}" alt="" /><img class="showsticky" src="{{ url_for('static',filename='images/resource/logo10.png')}}" alt="" /></a>
 				</div><!-- Logo -->
 				<div class="btn-extars">
 					
