--- a/app/templates/blog_list.html
+++ b/app/templates/blog_list.html
@@ -18,6 +18,17 @@
 	</section>
 
 	<section>
+		{% with messages=get_flashed_messages(with_categories=true) %}
+		{% if messages %}
+		{% for category,message in messages %}
+		<center>
+			<div class="alert alert-{{category}} mt-5" style="width: 20%;">
+				{{message}}
+			</div>
+		</center>
+			{% endfor %}
+			{% endif %}
+			{% endwith %}
 		<div class="block">
 			<div class="container">
 				 <div class="row">
